quase terminado html, css reponsivo
falta só alinha o ul  de categoria com as outra  tag de "a". Entretanto as outra funcionalidade esta ok!

--- a/view/index.html
+++ b/view/index.html
@@ -7,6 +7,8 @@
     <title>loja</title>
     <!--box icons-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!--css da pagina-->
     <link rel="stylesheet" href="tema/style.css">
 </head>
 
@@ -25,11 +27,14 @@
             <a href="#about"><i class='bx bxs-user'></i> Minha conta</a>
             <a href="#services"><i class='bx bx-cart-alt'></i> Carrinho</a>
             <a href="#portfolio"><i class='bx bxs-contact'></i> Contato</a>
-            <a href="#portfolio">categorias</a>
             <ul>
-                <li><a href="">Categorias</a></li>
-                <li><a href="">Categorias</a></li>
-            </ul>
+                <li><a href="#">categorias</a>
+                    <ul>
+                        <li><a href="#">Smartphones</a></li>
+                        <li><a href="#">Computadores</a></li>
+                        <li><a href="#">TVs</a></li>
+                    </ul>
+                </li>
         </nav>
         <form class="pesquisar">
             <!--<label for="pesquisa">Pesquisar:</label>-->
@@ -119,7 +124,6 @@
         </section>
     
     <footer></footer>
-    <script src="https://unpkg.com/scrollreveal"></script>
 
     <script src="tema/script.js"></script>
 </body>
